updated ChatBox and SearchBar to 16px font to prevent auto zoom on mobile

--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -59,7 +59,7 @@
 .chatbox__message {
   margin: 0.5rem 0;
   line-height: 1.5;
-  font-size: 14px;
+  font-size: 16px;
   padding: 10px 14px;
 }
 
@@ -97,7 +97,7 @@
   border-radius: 20px;
   border: 1px solid #ccc;
   outline: none;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .chatbox__input button {
@@ -106,7 +106,7 @@
   color: white;
   padding: 0 1rem;
   border-radius: 20px;
-  font-size: 14px;
+  font-size: 16px;
   cursor: pointer;
   min-width: 64px;
 }
